--- a/index.html
+++ b/index.html
@@ -343,6 +343,21 @@
           </div>
 
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="portfolio/siharis/siharis.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Si HaRis</h4>
+                <p>One stop solution for all of your HR problem</p>
+                <div class="portfolio-links">
+                  <!-- <a href="portfolio/snn_coffee/snn_photoprod1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="SNN Coffee Photography"><i class="bi bi-zoom-in"></i></a> -->
+                  <a target="_blank" href="https://siharis.zonaspace.id/" title="More Details"><i class="bi bi-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-photo">
             <div class="portfolio-wrap">
               <img src="portfolio/snn_coffee/snn_photoprod_box.jpg" class="img-fluid" alt="">
